# cargo-rclean

./: .gitignore  Cargo.toml  README.md  Untitled Diagram.drawio
src/: main.rs
