[package]
name = "cargo-rclean"
version = "1.0.1"
authors = ["TENX@coldswind@pm.me"]
edition = "2018"
license = "GPLv3"
description = "Clean your rust projects, recursively"
exclude = ["screenshots/"]

[dependencies]
walkdir = "2.3.1"
anyhow = "1.0.34"
ansi_term = "0.12.1"
clap = "2.33.3"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
incremental = true
