[package]
name = "cargo-rclean"
version = "1.2.0"
authors = ["Ares <coldswind@pm.me>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/TENX-S/cargo-rclean"
keywords = ["cargo", "clean", "recursive"]
description = "Clean your rust projects, recursively"
exclude = ["screenshots/"]

[dependencies]
clap = "2.33.3"
anyhow = "1.0.34"
walkdir = "2.3.1"
ansi_term = "0.12.1"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
incremental = true
